only update the arg counts once if child arg comes before parent arg

* if the child arg comes before the parent arg we need to update the
   argument counts and take the child arg out of the marshalling lists
   since it is handled by the parent
 * when two parents reference the same child arg as is the case with
   two arrays which have a single length argument we only want to update
   the count once
 * to do this we introduce the PYGI_META_ARG_CHILD_NEEDS_UPDATE meta type
   and only do the count update if this is set
 * APIs should keep in mind that this take extra processing so child args
   should really come after their parents

https://bugzilla.gnome.org/show_bug.cgi?id=627236